--- a/index.html
+++ b/index.html
@@ -13,6 +13,75 @@
   <title>J & K Orthopedics | Restoring Wholeness Since 1984</title>
 </head>
 <body>
-  
+  <header>
+    <div class="container">
+      <nav class="navbar bg-light navbar-light navbar-expand-sm">
+        <a class="navbar-brand d-none d-sm-inline-block" href="index.html">
+          <img src="images/icon.jpg" style="width: 80px;" alt="J & K Orthopedics Logo">
+        </a>
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="#">Home</a>
+          <a class="nav-item nav-link" href="#">About</a>
+          <a class="nav-item nav-link" href="#">Services</a>
+          <a class="nav-item nav-link" href="#">Contact</a>
+        </div>
+        <span class="navbar-text d-none d-xl-inline-block">Restoring Wholeness Since 1984</span>
+      </nav>
+      <img src="images/banner.jpg" alt="Windsurfer with prosthetic right leg">
+    </div>
+  </header>
+  <div class="container">
+    <h1 class="display-4">Welcome to J & K Orthopedics</h1>
+    <h2>Restoring Wholeness Since 1984</h2>
+    <p>Excellence is the standard of service at J&K Orthopedics. This means meeting our patients’ needs by consistently
+    exceeding expectations. Our success is measured by the quality of the service we provide.</p>
+
+    <h2>Services</h2>
+    <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4">
+      <div class="col">
+        <section class="card bg-light">
+          <img src="images/orthotics.jpg" alt="" class="img-fluid card-img-top">
+          <div class="card-body">
+            <h2 class="card-title">Orthotic Systems</h2>
+            <p class="card-text">Description or list of details, etc.</p>
+            <a href="/services.html" class="card-link">Learn More</a>
+          </div>
+        </section>
+      </div><!--col-->
+      <div class="col">
+        <section class="card bg-light">
+          <img src="images/prosthetics.jpg" alt="" class="img-fluid card-img-top">
+          <div class="card-body">
+            <h2 class="card-title">Prosthetic Systems</h2>
+            <p class="card-text">Description or list of details, etc.</p>
+            <a href="/services.html" class="card-link">Learn More</a>
+          </div>
+        </section>
+      </div>
+      <!--col-->
+      <div class="col">
+        <section class="card bg-light">
+          <img src="images/certification.jpg" alt="" class="img-fluid card-img-top">
+          <div class="card-body">
+            <h2 class="card-title">Board Certified</h2>
+            <p class="card-text">Description or list of details, etc.</p>
+            <a href="/about.html" class="card-link">Learn More</a>
+          </div>
+        </section>
+      </div>
+      <!--col-->
+      <div class="col">
+        <section class="card bg-light">
+          <img src="images/orthotics.jpg" alt="" class="img-fluid card-img-top">
+          <div class="card-body">
+            <h2 class="card-title">Another section?</h2>
+            <p class="card-text">Getting hi-res images of similar sizes would help a lot!</p>
+            <a href="#" class="card-link">Learn More</a>
+          </div>
+        </section>
+      </div>
+      <!--col-->
+    </div><!--row row-cols-->
+  </div><!--container-->
 </body>
 </html>
