updated jumbotron and h4

--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
     </div>
   </header>
   <div class="container">
-    <h1 class="display-4">Welcome to J & K Orthopedics</h1>
-    <h2>Restoring Wholeness Since 1984</h2>
+    <div class="jumbotron">
+      <h1 class="display-4">Welcome to J & K Orthopedics</h1>
+      <p class="lead">Restoring Wholeness Since 1984</p>
+      <hr class="my-4">
+    </div>
     <p>Excellence is the standard of service at J&K Orthopedics. This means meeting our patients’ needs by consistently
     exceeding expectations. Our success is measured by the quality of the service we provide.</p>
 
