--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="J & K Ortopedics - Our pledge to restore wholeness since 1984.">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="src/styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
@@ -13,6 +13,34 @@
   <title>About Us</title>
 </head>
 <body>
-  
+  <div class="container">
+    <h1>Our Locations</h1>
+    <div class="row">
+      <div class="col">
+        <h2>Covina</h2>
+        <address>
+          224 W. College, Ste. B
+          <br />
+          Covina, CA 91723
+          <br />
+          <a href="tel:+16263318856">626-331-8856</a>
+        </address>
+      </div>
+      <div class="col">
+        <h2>Pomona</h2>
+        <address>
+          320 E. Bonita Ave.
+          <br />
+          Pomona, CA 91767
+          <br />
+          <a href="tel:+19096211180">909-621-1180</a>
+        </address>
+      </div>
+    </div><!--row-->
+    <div id="map">
+      <iframe src="https://www.google.com/maps/d/u/0/embed?mid=162SSa6rS2PATXoxljrfshwRTCoJP-aFv" width="640"
+        height="480"></iframe>
+    </div><!--map-->
+  </div><!--container-->
 </body>
 </html>
