content for services page

--- a/about.html
+++ b/about.html
@@ -14,33 +14,30 @@
 </head>
 <body>
   <div class="container">
-    <h1>Our Locations</h1>
-    <div class="row">
-      <div class="col">
-        <h2>Covina</h2>
-        <address>
-          224 W. College, Ste. B
-          <br />
-          Covina, CA 91723
-          <br />
-          <a href="tel:+16263318856">626-331-8856</a>
-        </address>
-      </div>
-      <div class="col">
-        <h2>Pomona</h2>
-        <address>
-          320 E. Bonita Ave.
-          <br />
-          Pomona, CA 91767
-          <br />
-          <a href="tel:+19096211180">909-621-1180</a>
-        </address>
-      </div>
-    </div><!--row-->
-    <div id="map">
-      <iframe src="https://www.google.com/maps/d/u/0/embed?mid=162SSa6rS2PATXoxljrfshwRTCoJP-aFv" width="640"
-        height="480"></iframe>
-    </div><!--map-->
-  </div><!--container-->
+    <h1>About Us</h1>
+    <section>
+      As a member of the rehabilitation health care team, we work closely with the referring physician, therapist and case
+      manager. On-site fabrication enables us to ensure an exceptionally well-fitting device in a timely manner. Privileges at
+      neighboring hospitals and rehab centers enhance continuity of care. Effective communication between practitioner and
+      patient is also vital. We have staff members fluent in <strong>Spanish, Vietnamese, Tagalog and English</strong>.
+    </section>
+    <br />
+    <section>
+      Our typical service process entails:
+      <br />
+      <ul>
+        <li>Initial evaluation and consultation</li>
+        <li>Cast and measure</li>
+        <li>Custom fabrication of device</li>
+        <li>Patient fitting and adjustment</li>
+        <li>Patient/caregiver education & training</li>
+        <li>Follow-up visits</li>
+      </ul>
+    </section>
+    <figure>
+      <img src="images/certification.jpg" alt="certification of accreditation">
+      <figcaption>J&K Orthopedics, Inc. is accredited by the American Board for Certification in Orthotics, Prosthetics and Pedorthics</figcaption>
+    </figure>
+  </div>
 </body>
 </html>
