--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,41 @@
   <title>Contact Us</title>
 </head>
 <body>
-  
+  <div class="container">
+    <h1>Our Locations</h1>
+    <div class="row">
+      <div class="col">
+        <h2>Covina</h2>
+        <address>
+          224 W. College, Ste. B
+          <br />
+          Covina, CA 91723
+          <br />
+          <a href="tel:+16263318856">626-331-8856</a>
+        </address>
+      </div>
+      <div class="col">
+        <h2>Pomona</h2>
+        <address>
+          320 E. Bonita Ave.
+          <br />
+          Pomona, CA 91767
+          <br />
+          <a href="tel:+19096211180">909-621-1180</a>
+        </address>
+      </div>
+    </div>
+    <!--row-->
+    <div id="map">
+      <iframe src="https://www.google.com/maps/d/u/0/embed?mid=162SSa6rS2PATXoxljrfshwRTCoJP-aFv" width="640"
+        height="480"></iframe>
+    </div>
+    <!--map-->
+    <h2>Email Us</h2>
+    <address>
+      <a href="mailto:jk@jandkorthopedics.com">jk@jandkorthopedics.com</a>
+    </address>
+  </div>
+  <!--container-->
 </body>
 </html>
