--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
           <img src="images/icon.jpg" style="width: 80px;" alt="J & K Orthopedics Logo">
         </a>
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="#">Home</a>
-          <a class="nav-item nav-link" href="#">About</a>
-          <a class="nav-item nav-link" href="#">Services</a>
-          <a class="nav-item nav-link" href="#">Contact</a>
+          <a class="nav-item nav-link active" href="/index.html">Home</a>
+          <a class="nav-item nav-link" href="/about.html">About</a>
+          <a class="nav-item nav-link" href="/services.html">Services</a>
+          <a class="nav-item nav-link" href="/contact.html">Contact</a>
         </div>
         <span class="navbar-text d-none d-xl-inline-block">Restoring Wholeness Since 1984</span>
       </nav>
