--- a/services.html
+++ b/services.html
@@ -13,6 +13,46 @@
   <title>Services</title>
 </head>
 <body>
-  
+  <div class="container">
+    <h1>Services</h1>
+    <h2 id="orthotics">Orthotic Systems</h2>
+    <p>
+      Every orthosis begins with a thorough patient evaluation. Our orthotists are trained in converting subjective and
+      objective assessment to formulate the appropriate orthotic plan. This plan is then realized using appropriate
+      fabrication techniques and materials. The result is an orthotic system which restores and maintains optimal function for
+      our patient.
+    </p>
+    <p>Some of these systems include:</p>
+    <ul>
+      <li>Ankle-foot orthoses</li>
+      <li>Knee-ankle-foot orthoses</li>
+      <li>Hip-knee-ankle-foot orthoses</li>
+      <li>Spinal orthoses</li>
+      <li>Fracture bracing</li>
+      <li>Scoliosis treatment</li>
+      <li>Upper extremity orthoses</li>
+      <li>Cranial remolding systems</li>
+      <li>Custom shoe modifications</li>
+      <li>Diabetic Charcot boots</li>
+    </ul>
+    
+    <img src="images/orthotics.jpg" alt="Young girl, age 6, with orthotic system on left leg">
+    <h2 id="prosthetics">Prosthetics</h2>
+    <p>
+      A well-fitting, pain-free socket is the essential foundation for every prosthetic system. Additional components vary according to an individual patient’s needs, goals and abilities.
+    </p>
+    <p>Some component options include:</p>
+    <ul>
+      <li>Microprocessor knees</li>
+      <li>Myoelectric arms</li>
+      <li>Ultra-light weight systems</li>
+      <li>Dynamic response feet</li>
+      <li>Alternative socket design</li>
+      <li>Elevated vacuum system</li>
+      <li>Entirely waterproof systems</li>
+      <li>Sports prostheses</li>
+    </ul>
+    <img src="images/prosthetics.jpg" alt="An adult man with prosthetic systems on both legs swinging a golf club">
+  </div>
 </body>
 </html>
