--- a/services.html
+++ b/services.html
@@ -15,28 +15,45 @@
 <body>
   <div class="container">
     <h1>Services</h1>
-    <h2 id="orthotics">Orthotic Systems</h2>
-    <p>
-      Every orthosis begins with a thorough patient evaluation. Our orthotists are trained in converting subjective and
-      objective assessment to formulate the appropriate orthotic plan. This plan is then realized using appropriate
-      fabrication techniques and materials. The result is an orthotic system which restores and maintains optimal function for
-      our patient.
-    </p>
-    <p>Some of these systems include:</p>
-    <ul>
-      <li>Ankle-foot orthoses</li>
-      <li>Knee-ankle-foot orthoses</li>
-      <li>Hip-knee-ankle-foot orthoses</li>
-      <li>Spinal orthoses</li>
-      <li>Fracture bracing</li>
-      <li>Scoliosis treatment</li>
-      <li>Upper extremity orthoses</li>
-      <li>Cranial remolding systems</li>
-      <li>Custom shoe modifications</li>
-      <li>Diabetic Charcot boots</li>
-    </ul>
-    
-    <img src="images/orthotics.jpg" alt="Young girl, age 6, with orthotic system on left leg">
+    <div class="row">
+      <div class="col">
+        <h2 id="orthotics">Orthotic Systems</h2>
+        <p>
+          Every orthosis begins with a thorough patient evaluation. Our orthotists are trained in converting subjective and
+          objective assessment to formulate the appropriate orthotic plan. This plan is then realized using appropriate
+          fabrication techniques and materials. The result is an orthotic system which restores and maintains optimal function for
+          our patient.
+        </p>
+        <p>Some of these systems include:</p>
+        <ul>
+          <li>Ankle-foot orthoses</li>
+          <li>Knee-ankle-foot orthoses</li>
+          <li>Hip-knee-ankle-foot orthoses</li>
+          <li>Spinal orthoses</li>
+          <li>Fracture bracing</li>
+          <li>Scoliosis treatment</li>
+          <li>Upper extremity orthoses</li>
+          <li>Cranial remolding systems</li>
+          <li>Custom shoe modifications</li>
+          <li>Diabetic Charcot boots</li>
+        </ul>
+      </div><!--col-->
+      <div class="col">
+        <div class="carousel slide carousel-fade" id="orthotics-carousel" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="images/orthotics.jpg" class="d-block w-100" alt="Young girl, age 6, with orthotic system on left leg">
+            </div><!--carousel-item-->
+            <div class="carousel-item">
+              <img src="images/tom-claes-13g9FZqVvNY-unsplash.jpg" class="d-block w-100" alt="">
+            </div><!--carousel-item-->
+            <div class="carousel-item">
+              <img src="images/tom-claes-HIdUiamYIs0-unsplash.jpg" class="d-block w-100" alt="">
+            </div><!--carousel-item-->
+          </div><!--carousel-inner-->
+        </div><!--carousel-->
+      </div><!--col-->
+    </div><!--row-->
     <h2 id="prosthetics">Prosthetics</h2>
     <p>
       A well-fitting, pain-free socket is the essential foundation for every prosthetic system. Additional components vary according to an individual patient’s needs, goals and abilities.
@@ -53,6 +70,6 @@
       <li>Sports prostheses</li>
     </ul>
     <img src="images/prosthetics.jpg" alt="An adult man with prosthetic systems on both legs swinging a golf club">
-  </div>
+  </div><!--container-->
 </body>
 </html>
