fixed carousels, adjusted image sizes

--- a/services.html
+++ b/services.html
@@ -16,8 +16,8 @@
   <div class="container">
     <h1>Services</h1>
     <div class="row">
+      <h2 id="orthotics">Orthotic Systems</h2>
       <div class="col">
-        <h2 id="orthotics">Orthotic Systems</h2>
         <p>
           Every orthosis begins with a thorough patient evaluation. Our orthotists are trained in converting subjective and
           objective assessment to formulate the appropriate orthotic plan. This plan is then realized using appropriate
@@ -38,8 +38,8 @@
           <li>Diabetic Charcot boots</li>
         </ul>
       </div><!--col-->
-      <div class="col">
-        <div class="carousel slide carousel-fade" id="orthotics-carousel" data-ride="carousel">
+      <div class="col-3">
+        <div class="carousel slide carousel-fade" id="orthotics-carousel" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img src="images/orthotics.jpg" class="d-block w-100" alt="Young girl, age 6, with orthotic system on left leg">
@@ -55,21 +55,39 @@
       </div><!--col-->
     </div><!--row-->
     <h2 id="prosthetics">Prosthetics</h2>
-    <p>
-      A well-fitting, pain-free socket is the essential foundation for every prosthetic system. Additional components vary according to an individual patient’s needs, goals and abilities.
-    </p>
-    <p>Some component options include:</p>
-    <ul>
-      <li>Microprocessor knees</li>
-      <li>Myoelectric arms</li>
-      <li>Ultra-light weight systems</li>
-      <li>Dynamic response feet</li>
-      <li>Alternative socket design</li>
-      <li>Elevated vacuum system</li>
-      <li>Entirely waterproof systems</li>
-      <li>Sports prostheses</li>
-    </ul>
-    <img src="images/prosthetics.jpg" alt="An adult man with prosthetic systems on both legs swinging a golf club">
+    <div class="row">
+      <div class="col-3">
+        <div class="carousel slide carousel-fade" id="prosthetics-carousel" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="images/prosthetics.jpg" class="d-block w-100" alt="Young girl, age 6, with orthotic system on left leg">
+            </div><!--carousel-item-->
+            <div class="carousel-item">
+              <img src="images/tom-claes-13g9FZqVvNY-unsplash.jpg" class="d-block w-100" alt="">
+            </div><!--carousel-item-->
+            <div class="carousel-item">
+              <img src="images/tom-claes-HIdUiamYIs0-unsplash.jpg" class="d-block w-100" alt="">
+            </div><!--carousel-item-->
+          </div><!--carousel-inner-->
+        </div><!--carousel-->
+      </div><!--col-->
+      <div class="col">
+        <p>
+          A well-fitting, pain-free socket is the essential foundation for every prosthetic system. Additional components vary according to an individual patient’s needs, goals and abilities.
+        </p>
+        <p>Some component options include:</p>
+        <ul>
+          <li>Microprocessor knees</li>
+          <li>Myoelectric arms</li>
+          <li>Ultra-light weight systems</li>
+          <li>Dynamic response feet</li>
+          <li>Alternative socket design</li>
+          <li>Elevated vacuum system</li>
+          <li>Entirely waterproof systems</li>
+          <li>Sports prostheses</li>
+        </ul>
+      </div><!--col-->
+    </div><!--row-->
   </div><!--container-->
 </body>
 </html>
