Added images, styling

--- a/index.html
+++ b/index.html
@@ -19,21 +19,20 @@
         <a class="navbar-brand d-none d-sm-inline-block" href="index.html">
           <img src="images/icon.jpg" style="width: 80px;" alt="J & K Orthopedics Logo">
         </a>
-        <div class="navbar-nav">
+        <span class="navbar-text mx-auto d-none d-xl-inline-block">Restoring Wholeness Since 1984</span>
+        <div class="navbar-nav mx-auto">
           <a class="nav-item nav-link active" href="/index.html">Home</a>
           <a class="nav-item nav-link" href="/about.html">About</a>
           <a class="nav-item nav-link" href="/services.html">Services</a>
           <a class="nav-item nav-link" href="/contact.html">Contact</a>
         </div>
-        <span class="navbar-text d-none d-xl-inline-block">Restoring Wholeness Since 1984</span>
       </nav>
-      <img src="images/banner.jpg" alt="Windsurfer with prosthetic right leg">
+      <img id="banner" src="images/banner.jpg" alt="Windsurfer with prosthetic right leg">
     </div>
   </header>
   <div class="container">
     <div class="jumbotron">
       <h1 class="display-4">Welcome to J & K Orthopedics</h1>
-      <p class="lead">Restoring Wholeness Since 1984</p>
       <hr class="my-4">
     </div>
     <p>Excellence is the standard of service at J&K Orthopedics. This means meeting our patients’ needs by consistently
