--- a/services.html
+++ b/services.html
@@ -38,7 +38,7 @@
           <li>Diabetic Charcot boots</li>
         </ul>
       </div><!--col-->
-      <div class="col-3">
+      <div class="col-3 d-flex align-items-center">
         <div class="carousel slide carousel-fade" id="orthotics-carousel" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -60,13 +60,13 @@
         <div class="carousel slide carousel-fade" id="prosthetics-carousel" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="images/prosthetics.jpg" class="d-block w-100" alt="Young girl, age 6, with orthotic system on left leg">
+              <img src="images/prosthetics.jpg" class="d-block" alt="Young girl, age 6, with orthotic system on left leg">
             </div><!--carousel-item-->
             <div class="carousel-item">
-              <img src="images/tom-claes-13g9FZqVvNY-unsplash.jpg" class="d-block w-100" alt="">
+              <img src="images/elevate-1yvOLKRwQKc-unsplash.jpg" class="d-block" alt="">
             </div><!--carousel-item-->
             <div class="carousel-item">
-              <img src="images/tom-claes-HIdUiamYIs0-unsplash.jpg" class="d-block w-100" alt="">
+              <img src="images/thisisengineering-raeng-4w0XkDe2Ee8-unsplash.jpg" class="d-block" alt="">
             </div><!--carousel-item-->
           </div><!--carousel-inner-->
         </div><!--carousel-->
