added navbar to other pages

--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,20 @@
   <title>Contact Us</title>
 </head>
 <body>
+  <div class="container-fluid">
+    <nav class="navbar bg-light navbar-light navbar-expand-sm">
+      <a class="navbar-brand d-none d-sm-inline-block" href="index.html">
+        <img src="images/icon.jpg" style="width: 80px;" alt="J & K Orthopedics Logo">
+      </a>
+      <span class="navbar-text mx-auto d-none d-xl-inline-block">Restoring Wholeness Since 1984</span>
+      <div class="navbar-nav mx-auto">
+        <a class="nav-item nav-link" href="/index.html">Home</a>
+        <a class="nav-item nav-link" href="/about.html">About</a>
+        <a class="nav-item nav-link" href="/services.html">Services</a>
+        <a class="nav-item nav-link active" href="/contact.html">Contact</a>
+      </div>
+    </nav>
+  </div>
   <div class="container">
     <h1>Our Locations</h1>
     <div class="row">
