--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <header>
-    <div class="container">
+    <div class="container-fluid">
       <nav class="navbar bg-light navbar-light navbar-expand-sm">
         <a class="navbar-brand d-none d-sm-inline-block" href="index.html">
           <img src="images/icon.jpg" style="width: 80px;" alt="J & K Orthopedics Logo">
