styled as featurette

--- a/services.html
+++ b/services.html
@@ -29,15 +29,14 @@
   </div>
   <div class="container">
     <h1>Services</h1>
-    <div class="row">
-      <h2 id="orthotics">Orthotic Systems</h2>
-      <div class="col">
-        <p>
+    <div class="featurette">
+      <h2 class="featurette-heading" id="orthotics">Orthotic Systems</h2>
+      <p class="lead">
           Every orthosis begins with a thorough patient evaluation. Our orthotists are trained in converting subjective and
           objective assessment to formulate the appropriate orthotic plan. This plan is then realized using appropriate
           fabrication techniques and materials. The result is an orthotic system which restores and maintains optimal function for
           our patient.
-        </p>
+      </p>
         <p>Some of these systems include:</p>
         <ul>
           <li>Ankle-foot orthoses</li>
@@ -51,7 +50,8 @@
           <li>Custom shoe modifications</li>
           <li>Diabetic Charcot boots</li>
         </ul>
-      </div><!--col-->
+      </div><!--featurette-->
+      <hr class="featurette-divider" />
       <div class="col-3 d-flex align-items-center">
         <div class="carousel slide carousel-fade" id="orthotics-carousel" data-bs-ride="carousel">
           <div class="carousel-inner">
@@ -67,7 +67,6 @@
           </div><!--carousel-inner-->
         </div><!--carousel-->
       </div><!--col-->
-    </div><!--row-->
     <h2 id="prosthetics">Prosthetics</h2>
     <div class="row">
       <div class="col-3">
