changed how lists display

--- a/services.html
+++ b/services.html
@@ -27,9 +27,11 @@
       </div>
     </nav>
   </div>
-  <div class="container">
+  <div class="container services">
     <h1>Services</h1>
     <div class="featurette">
+      <img src="images/orthotics.jpg" class="featurette-image pull-right"
+        alt="Young girl, age 6, with orthotic system on left leg" />
       <h2 class="featurette-heading" id="orthotics">Orthotic Systems</h2>
       <p class="lead">
           Every orthosis begins with a thorough patient evaluation. Our orthotists are trained in converting subjective and
@@ -38,7 +40,7 @@
           our patient.
       </p>
         <p>Some of these systems include:</p>
-        <ul>
+        <ul class="service-list">
           <li>Ankle-foot orthoses</li>
           <li>Knee-ankle-foot orthoses</li>
           <li>Hip-knee-ankle-foot orthoses</li>
@@ -50,7 +52,7 @@
           <li>Custom shoe modifications</li>
           <li>Diabetic Charcot boots</li>
         </ul>
-      </div><!--featurette-->
+    </div><!--featurette-->
       <hr class="featurette-divider" />
       <div class="col-3 d-flex align-items-center">
         <div class="carousel slide carousel-fade" id="orthotics-carousel" data-bs-ride="carousel">
@@ -89,7 +91,7 @@
           A well-fitting, pain-free socket is the essential foundation for every prosthetic system. Additional components vary according to an individual patient’s needs, goals and abilities.
         </p>
         <p>Some component options include:</p>
-        <ul>
+        <ul class="service-list">
           <li>Microprocessor knees</li>
           <li>Myoelectric arms</li>
           <li>Ultra-light weight systems</li>
