--- a/services.html
+++ b/services.html
@@ -30,8 +30,24 @@
   <div class="container services">
     <h1>Services</h1>
     <div class="featurette">
-      <img src="images/orthotics.jpg" class="featurette-image pull-right"
-        alt="Young girl, age 6, with orthotic system on left leg" />
+      <div class="carousel slide carousel-fade featurette-image pull-right" id="orthotics-carousel" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/orthotics.jpg" class="d-block" alt="Young girl, age 6, with orthotic system on left leg">
+          </div>
+          <!--carousel-item-->
+          <div class="carousel-item">
+            <img src="images/tom-claes-13g9FZqVvNY-unsplash.jpg" class="d-block" alt="">
+          </div>
+          <!--carousel-item-->
+          <div class="carousel-item">
+            <img src="images/tom-claes-HIdUiamYIs0-unsplash.jpg" class="d-block" alt="">
+          </div>
+          <!--carousel-item-->
+        </div>
+        <!--carousel-inner-->
+      </div>
+      <!--carousel-->
       <h2 class="featurette-heading" id="orthotics">Orthotic Systems</h2>
       <p class="lead">
           Every orthosis begins with a thorough patient evaluation. Our orthotists are trained in converting subjective and
@@ -54,21 +70,6 @@
         </ul>
     </div><!--featurette-->
       <hr class="featurette-divider" />
-      <div class="col-3 d-flex align-items-center">
-        <div class="carousel slide carousel-fade" id="orthotics-carousel" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="images/orthotics.jpg" class="d-block w-100" alt="Young girl, age 6, with orthotic system on left leg">
-            </div><!--carousel-item-->
-            <div class="carousel-item">
-              <img src="images/tom-claes-13g9FZqVvNY-unsplash.jpg" class="d-block w-100" alt="">
-            </div><!--carousel-item-->
-            <div class="carousel-item">
-              <img src="images/tom-claes-HIdUiamYIs0-unsplash.jpg" class="d-block w-100" alt="">
-            </div><!--carousel-item-->
-          </div><!--carousel-inner-->
-        </div><!--carousel-->
-      </div><!--col-->
     <h2 id="prosthetics">Prosthetics</h2>
     <div class="row">
       <div class="col-3">
