--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
       </div>
     </div>
     <!--row-->
-    <div id="map">
+    <div id="map" class="ratio ratio-4x3">
       <iframe src="https://www.google.com/maps/d/u/0/embed?mid=162SSa6rS2PATXoxljrfshwRTCoJP-aFv" width="640"
         height="480"></iframe>
     </div>
